--- a/github/workflows/update-props.yml
+++ b/github/workflows/update-props.yml
@@ -1,32 +1,36 @@
-name: Update MLB Player Props Daily
+name: Update Predictions
 
 on:
   schedule:
-    - cron: '0 7 * * *'  # Every day at 7:00 UTC
-  workflow_dispatch:   # Manual trigger
+    - cron: "0 */2 * * *" # Every 2 hours
+  workflow_dispatch:
 
 jobs:
-  update_props:
+  update:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v3
+      - name: Checkout repo
+        uses: actions/checkout@v4
+        with:
+          persist-credentials: false
 
-    - name: Set up Python
-      uses: actions/setup-python@v4
-      with:
-        python-version: 3.10
+      - name: Set up Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: 20
 
-    - name: Install dependencies
-      run: pip install requests
+      - name: Generate predictions
+        run: |
+          mkdir -p predictions
+          node generate-predictions.js > predictions/latest.json
 
-    - name: Run update script
-      run: python update_props.py
-
-    - name: Commit & push changes
-      run: |
-        git config user.name "github-actions[bot]"
-        git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
-        git add props.json
-        git commit -m "Auto update props.json [skip ci]" || echo "No changes to commit"
-        git push
+      - name: Commit and push
+        run: |
+          git config user.name "GitHub Actions"
+          git config user.email "actions@github.com"
+          git add predictions/latest.json
+          git commit -m "⏱️ Update latest predictions" || echo "No changes to commit"
+          git push
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
